Tue Jul 15 23:58:59 2014  Jared Jennings  <jared.jennings.ctr@us.af.mil>

	* ext/digest/digest.c: expect digest init and finish functions to
	  indicate success or failure; raise exception on failure.
	  [ruby-core:61614] [Bug #9659]

Tue Jul 15 20:31:40 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: modify document for WIN32OLE_RECORD.

Tue Jul 15 12:42:23 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* defs/default_gems: change version definition file of rake.

Tue Jul 15 12:00:03 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rake.rb, lib/rake/*.rb: Upgrade to rake-10.3.2
	  [fix GH-668]
	* test/rake/*.rb: ditto.

Mon Jul 14 19:14:51 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: modify WIN32OLE class document and
	  add comment for constants of WIN32OLE.

Mon Jul 14 16:38:45 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (struct rb_iseq_struct): reduce to 288 bytes
	  on x86-64 (from 296 bytes)

Mon Jul 14 16:07:25 2014  Eric Wong  <e@80x24.org>

	* iseq.h (struct iseq_catch_table_entry): shrink to 32 bytes
	  on x86-64 (from 48 bytes)

Mon Jul 14 16:04:41 2014  Eric Wong  <e@80x24.org>

	* iseq.h (struct iseq_catch_table): new flexible array struct
		 (iseq_catch_table_bytes): allocated size function
	* vm_core.h (struct rb_iseq_struct): update catch_table member
	  This reduces the struct from 304 to 296 bytes on x86-64.
	* compile.c (iseq_set_exception_table): update for struct changes
	* iseq.c (iseq_free): ditto
	* iseq.c (iseq_memsize): ditto
	* iseq.c (rb_iseq_disasm): ditto
	* iseq.c (iseq_data_to_ary): ditto
	* iseq.c (rb_iseq_build_for_ruby2cext): ditto (untested)
	* vm.c (vm_exec): ditto
	* vm_core.h (struct rb_iseq_struct): ditto
	* vm_insnhelper.c (vm_throw): ditto

Sun Jul 13 17:49:52 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/openssl/ossl_cipher.c: Fix call to ciphers class method and
	  spell out `encryption` by @vipulnsward [fix GH-664]
